Resolve issue with indi list
The lists of individuals, specifically the starting indi and stopping indi lists, have the items show as too large when there is a long name that wraps to the next line. This commit solves this issue by preventing this wrap and instead cutting off the content if it's too long.

--- a/resources/css/gvexport.css
+++ b/resources/css/gvexport.css
@@ -256,6 +256,9 @@
     margin: 3px;
     width: 100%;
     display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .indi_list_item {
@@ -266,9 +269,14 @@
 .list_item_skinny {
     width: 80%;
     display: block;
-    text-overflow: ellipsis;
+}
+
+.list_item_content {
+    width: 95%;
+    display: block;
     white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .options-panel-background {
